All book methods implemented. Course - left
